# learningOpenGL

./: CMakeLists.txt  README.md
exercise/2.1.helloTriangle/: helloTriangle2.cpp
exercise/3.1.shaders/: shaders1.cpp  shaders3.cpp
exercise/4.1.textures/: textures2.cpp  textures4.cpp
exercise/5.1.transformations/: transformations2.cpp
exercise/6.1.coordinate_systems/: coordinate_systems.cpp
exercise/helloTriangle/: helloTriangle3.cpp
exercise/shaders/: shaders1.cpp  shaders2.cpp  shaders3.cpp
exercise/textures/: textures3.cpp
shaders/: 4.2.texture.fs
src/: learn_def.h  shader_s.h
src/3.1.shaders/: shaders_class.cpp
src/4.1.textures/: textures_combined.cpp
src/5.1.transformations/: transformations.cpp
src/6.1.coordinate_systems/: coordinate_systems.cpp  coordinate_systems_depth.cpp  coordinate_systems_multiple.cpp
src/helloTriangle2/: helloTriangle.cpp
src/shaders/: shaders_class.cpp
src/textures/: textures.cpp
